cmake_minimum_required(VERSION 3.26)
project(swe_edu)

set(CMAKE_CXX_STANDARD 17)

add_executable(swe_edu main.cpp
        week1/1-two-pointers/valid-palindrome/valid-palindrome.h
        week1/1-two-pointers/valid-palindrome/valid-palindrome.cpp
        week1/1-two-pointers/sum-of-three-values/sum-of-three-values.cpp
        week1/1-two-pointers/sum-of-three-values/sum-of-three-values.h
        week1/2-fast-and-slow-pointers/happy-number/happy-number.h
        week1/2-fast-and-slow-pointers/happy-number/happy-number.cpp
        week1/2-fast-and-slow-pointers/linked-list-cycle/linked-list-cycle.h
        week1/2-fast-and-slow-pointers/linked-list-cycle/linked-list-cycle.cpp
        week1/3-stacks/remove-all-adjacent-duplicates-in-string/remove-all-adjacent-duplicates-in-string.h
        week1/3-stacks/remove-all-adjacent-duplicates-in-string/remove-all-adjacent-duplicates-in-string.cpp
        week1/3-stacks/implement-queue-using-stack/implement-queue-using-stack.cpp
        week1/3-stacks/implement-queue-using-stack/implement-queue-using-stack.h
        week1/4-hash-maps/impl-string-hash-map/impl-string-hash-map.h
        week1/4-hash-maps/impl-string-hash-map/impl-string-hash-map.cpp
        neetcode/1-arrays-and-hashing/group-anagrams-by-freq/group-anagrams-by-freq.h
        neetcode/1-arrays-and-hashing/group-anagrams-by-freq/group-anagrams-by-freq.cpp
        neetcode/1-arrays-and-hashing/group-anagrams-by-sort/group-anagrams-by-sort.h
        neetcode/1-arrays-and-hashing/group-anagrams-by-sort/group-anagrams-by-sort.cpp
        neetcode/1-arrays-and-hashing/top-k-freq-elements/top-k-freq-elements.h
        neetcode/1-arrays-and-hashing/top-k-freq-elements/top-k-freq-elements.cpp
        neetcode/1-arrays-and-hashing/top-k-freq-elements-bucket-sort/top-k-freq-elements-bucket-sort.cpp
        neetcode/1-arrays-and-hashing/top-k-freq-elements-bucket-sort/top-k-freq-elements-bucket-sort.h
        neetcode/1-arrays-and-hashing/product-of-arr-except-self/product-of-arr-except-self.cpp
        neetcode/1-arrays-and-hashing/valid-sudoku/valid-sudoku.cpp
        neetcode/1-arrays-and-hashing/valid-sudoku/valid-sudoku.h
        neetcode/1-arrays-and-hashing/longest-consequtive-sequence/longest-consequtive-sequence.cpp
        neetcode/2-two-pointers/4-sum/4-sum.cpp
        neetcode/2-two-pointers/rotate-array/rotate-array.cpp
        neetcode/2-two-pointers/rotate-array/rotate-array.h
        neetcode/2-two-pointers/arr-with-elems-not-equal-to-avg-of-neighbors/arr-with-elems-not-equal-to-avg-of-neighbors.cpp
        neetcode/2-two-pointers/arr-with-elems-not-equal-to-avg-of-neighbors/arr-with-elems-not-equal-to-avg-of-neighbors.h
        neetcode/2-two-pointers/number-of-subseqences-satisfying-sum-condition/number-of-subseqences-satisfying-sum-condition.h
        neetcode/2-two-pointers/number-of-subseqences-satisfying-sum-condition/number-of-subseqences-satisfying-sum-condition.cpp
        neetcode/2-two-pointers/remove-duplicates-from-sorted-arr-2/remove-duplicates-from-sorted-arr-2.cpp
        neetcode/2-two-pointers/remove-duplicates-from-sorted-arr-2/remove-duplicates-from-sorted-arr-2.h
        neetcode/2-two-pointers/2sum/2sum.cpp
        neetcode/2-two-pointers/2sum/2sum.h
        neetcode/2-two-pointers/3sum/3sum.cpp
        neetcode/2-two-pointers/3sum/3sum.h
        neetcode/2-two-pointers/boats-to-save-people/boats-to-save-people.cpp
        neetcode/2-two-pointers/boats-to-save-people/boats-to-save-people.h
        neetcode/3-sliding-window/num-of-sub-arr-of-size-K-and-avg-greater-than-or-eq-to-threshold/num-of-sub-arr-of-size-K-and-avg-greater-than-or-eq-to-threshold.cpp
        neetcode/3-sliding-window/num-of-sub-arr-of-size-K-and-avg-greater-than-or-eq-to-threshold/num-of-sub-arr-of-size-K-and-avg-greater-than-or-eq-to-threshold.h
        neetcode/3-sliding-window/longest-substr-without-repeating-chars/longest-substr-without-repeating-chars.cpp
        neetcode/3-sliding-window/longest-substr-without-repeating-chars/longest-substr-without-repeating-chars.h
        neetcode/3-sliding-window/longest-repeating-char-replacment/longest-repeating-char-replacment.cpp
        neetcode/3-sliding-window/longest-repeating-char-replacment/longest-repeating-char-replacment.h
        neetcode/3-sliding-window/permutation-in-string/permutation-in-string.cpp
        neetcode/3-sliding-window/permutation-in-string/permutation-in-string.h
        neetcode/3-sliding-window/fruit-into-baskets/fruit-into-baskets.cpp
        neetcode/3-sliding-window/fruit-into-baskets/fruit-into-baskets.h
        neetcode/3-sliding-window/max-num-of-vowels-in-a-substring-of-given-length/max-num-of-vowels-in-a-substring-of-given-length.cpp
        neetcode/3-sliding-window/max-num-of-vowels-in-a-substring-of-given-length/max-num-of-vowels-in-a-substring-of-given-length.h
        neetcode/3-sliding-window/min-size-subarr-sum/min-size-subarr-sum.cpp
        neetcode/3-sliding-window/min-size-subarr-sum/min-size-subarr-sum.h
        neetcode/3-sliding-window/find-k-closest-elems/find-k-closest-elems.cpp
        neetcode/3-sliding-window/find-k-closest-elems/find-k-closest-elems.h
        neetcode/1-arrays-and-hashing/fundamentals/contains-duplicates/contains-duplicates.cpp
        neetcode/1-arrays-and-hashing/fundamentals/contains-duplicates/contains-duplicates.h
        neetcode/1-arrays-and-hashing/fundamentals/valid-anagram/valid-anagram.cpp
        neetcode/1-arrays-and-hashing/fundamentals/valid-anagram/valid-anagram.h
        neetcode/1-arrays-and-hashing/fundamentals/concatenation-of-arr/concatenation-of-arr.cpp
        neetcode/1-arrays-and-hashing/fundamentals/concatenation-of-arr/concatenation-of-arr.h
        neetcode/1-arrays-and-hashing/fundamentals/replace-elems-with-greatest-elem-on-right-side/replace-elems-with-greatest-elem-on-right-side.cpp
        neetcode/1-arrays-and-hashing/fundamentals/replace-elems-with-greatest-elem-on-right-side/replace-elems-with-greatest-elem-on-right-side.h
        neetcode/1-arrays-and-hashing/fundamentals/is-subsequence/is-subsequence.cpp
        neetcode/1-arrays-and-hashing/fundamentals/is-subsequence/is-subsequence.h
        neetcode/1-arrays-and-hashing/fundamentals/length-of-last-word/length-of-last-word.cpp
        neetcode/1-arrays-and-hashing/fundamentals/length-of-last-word/length-of-last-word.h
        neetcode/1-arrays-and-hashing/fundamentals/longest-common-prefix/longest-common-prefix.cpp
        neetcode/1-arrays-and-hashing/fundamentals/longest-common-prefix/longest-common-prefix.h
        neetcode/1-arrays-and-hashing/fundamentals/pascals-triangle/pascals-triangle.cpp
        neetcode/1-arrays-and-hashing/fundamentals/pascals-triangle/pascals-triangle.h
        neetcode/1-arrays-and-hashing/fundamentals/remove-element/remove-element.cpp
        neetcode/1-arrays-and-hashing/fundamentals/remove-element/remove-element.h
        neetcode/1-arrays-and-hashing/fundamentals/unique-email-addr/unique-email-addr.cpp
        neetcode/1-arrays-and-hashing/fundamentals/unique-email-addr/unique-email-addr.h
        neetcode/1-arrays-and-hashing/fundamentals/isomorphic-strings/isomorphic-strings.cpp
        neetcode/1-arrays-and-hashing/fundamentals/isomorphic-strings/isomorphic-strings.h
        neetcode/1-arrays-and-hashing/fundamentals/can-place-flowers/can-place-flowers.cpp
        neetcode/1-arrays-and-hashing/fundamentals/can-place-flowers/can-place-flowers.h
        neetcode/1-arrays-and-hashing/fundamentals/majority-elem/majority-elem.cpp
        neetcode/1-arrays-and-hashing/fundamentals/majority-elem/majority-elem.h
        neetcode/1-arrays-and-hashing/fundamentals/next-greater-elem-1/next-greater-elem-1.cpp
        neetcode/1-arrays-and-hashing/fundamentals/next-greater-elem-1/next-greater-elem-1.h
        neetcode/1-arrays-and-hashing/fundamentals/find-pivot-index/find-pivot-index.cpp
        neetcode/1-arrays-and-hashing/fundamentals/find-pivot-index/find-pivot-index.h
        neetcode/1-arrays-and-hashing/fundamentals/range-sum-query-immutable/range-sum-query-immutable.cpp
        neetcode/1-arrays-and-hashing/fundamentals/range-sum-query-immutable/range-sum-query-immutable.h
        neetcode/1-arrays-and-hashing/fundamentals/find-all-nums-disappeared-in-arr/find-all-nums-disappeared-in-arr.cpp
        neetcode/1-arrays-and-hashing/fundamentals/find-all-nums-disappeared-in-arr/find-all-nums-disappeared-in-arr.h
        neetcode/1-arrays-and-hashing/fundamentals/max-num-of-ballons/max-num-of-ballons.cpp
        neetcode/1-arrays-and-hashing/fundamentals/max-num-of-ballons/max-num-of-ballons.h
        neetcode/1-arrays-and-hashing/fundamentals/word-pattern/word-pattern.cpp
        neetcode/1-arrays-and-hashing/fundamentals/word-pattern/word-pattern.h
        neetcode/1-arrays-and-hashing/medium/sort-arr/sort-arr.cpp
        neetcode/1-arrays-and-hashing/medium/sort-arr/sort-arr.h
        neetcode/1-arrays-and-hashing/medium/sort-arr-merge-sort/sort-arr-merge-sort.cpp
        neetcode/1-arrays-and-hashing/medium/sort-arr-merge-sort/sort-arr-merge-sort.h
        neetcode/1-arrays-and-hashing/medium/heap-sort/heap-sort.cpp
        neetcode/1-arrays-and-hashing/medium/heap-sort/heap-sort.h
        neetcode/1-arrays-and-hashing/medium/merge-sort/merge-sort.cpp
        neetcode/1-arrays-and-hashing/medium/merge-sort/merge-sort.h
        neetcode/1-arrays-and-hashing/medium/quick-sort/quick-sort.cpp
        neetcode/1-arrays-and-hashing/medium/quick-sort/quick-sort.h
        neetcode/1-arrays-and-hashing/fundamentals/design-hash-set/design-hash-set.cpp
        neetcode/1-arrays-and-hashing/fundamentals/design-hash-set/design-hash-set.h
        neetcode/1-arrays-and-hashing/fundamentals/design-hash-map/design-hash-map.cpp
        neetcode/1-arrays-and-hashing/fundamentals/design-hash-map/design-hash-map.h
        neetcode/1-arrays-and-hashing/medium/sort-colors/sort-colors.cpp
        neetcode/1-arrays-and-hashing/medium/sort-colors/sort-colors.h
        neetcode/1-arrays-and-hashing/medium/tiny-url/tiny-url.cpp
        neetcode/1-arrays-and-hashing/medium/tiny-url/tiny-url.h
        neetcode/1-arrays-and-hashing/medium/brick-wall/brick-wall.cpp
        neetcode/1-arrays-and-hashing/medium/brick-wall/brick-wall.h
        neetcode/1-arrays-and-hashing/medium/best-time-to-buy-sell-sotck-II/best-time-to-buy-sell-sotck-II.cpp
        neetcode/1-arrays-and-hashing/medium/best-time-to-buy-sell-sotck-II/best-time-to-buy-sell-sotck-II.h
        neetcode/1-arrays-and-hashing/medium/subarr-sum-equals-k/subarr-sum-equals-k.cpp
        neetcode/1-arrays-and-hashing/medium/subarr-sum-equals-k/subarr-sum-equals-k.h
        neetcode/1-arrays-and-hashing/medium/unique-len-3-palindromic-subsequence/unique-len-3-palindromic-subsequence.cpp
        neetcode/1-arrays-and-hashing/medium/unique-len-3-palindromic-subsequence/unique-len-3-palindromic-subsequence.h
        neetcode/1-arrays-and-hashing/medium/revise/longest-consequtive-sequence/longest-consequtive-sequence.cpp
        neetcode/1-arrays-and-hashing/medium/revise/longest-consequtive-sequence/longest-consequtive-sequence.h
        neetcode/1-arrays-and-hashing/medium/revise/sort-colors/sort-colors.cpp
        neetcode/1-arrays-and-hashing/medium/revise/sort-colors/sort-colors.h
        neetcode/1-arrays-and-hashing/medium/revise/brick-wall/brick-wall.cpp
        neetcode/1-arrays-and-hashing/medium/revise/brick-wall/brick-wall.h
        neetcode/1-arrays-and-hashing/medium/revise/best-time-to-buy-and-sell-stocks/best-time-to-buy-and-sell-stocks.cpp
        neetcode/1-arrays-and-hashing/medium/revise/best-time-to-buy-and-sell-stocks/best-time-to-buy-and-sell-stocks.h
        neetcode/1-arrays-and-hashing/medium/revise/subarr-sum-equals-k/subarr-sum-equals-k.cpp
        neetcode/1-arrays-and-hashing/medium/revise/subarr-sum-equals-k/subarr-sum-equals-k.h
        neetcode/1-arrays-and-hashing/medium/min-num-of-swaps-to-make-string-balanced/min-num-of-swaps-to-make-string-balanced.cpp
        neetcode/1-arrays-and-hashing/medium/min-num-of-swaps-to-make-string-balanced/min-num-of-swaps-to-make-string-balanced.h
        neetcode/1-arrays-and-hashing/medium/num-of-pairs-of-interchangeable-rectangles/num-of-pairs-of-interchangeable-rectangles.cpp
        neetcode/1-arrays-and-hashing/medium/num-of-pairs-of-interchangeable-rectangles/num-of-pairs-of-interchangeable-rectangles.h
        neetcode/1-arrays-and-hashing/medium/max-product-of-the-length-of-two-palindromic-subsequences/max-product-of-the-length-of-two-palindromic-subsequences.cpp
        neetcode/1-arrays-and-hashing/medium/max-product-of-the-length-of-two-palindromic-subsequences/max-product-of-the-length-of-two-palindromic-subsequences.h
        neetcode/1-arrays-and-hashing/medium/longest-palindromic-subsequence/longest-palindromic-subsequence.cpp
        neetcode/1-arrays-and-hashing/medium/longest-palindromic-subsequence/longest-palindromic-subsequence.h
        neetcode/1-arrays-and-hashing/medium/grid-game/grid-game.cpp
        neetcode/1-arrays-and-hashing/medium/grid-game/grid-game.h
        neetcode/1-arrays-and-hashing/medium/find-all-anagrams-in-a-string/find-all-anagrams-in-a-string.cpp
        neetcode/1-arrays-and-hashing/medium/find-all-anagrams-in-a-string/find-all-anagrams-in-a-string.h
        neetcode/1-arrays-and-hashing/medium/find-index-of-first-occurrence-in-string/find-index-of-first-occurrence-in-string.cpp
        neetcode/1-arrays-and-hashing/medium/find-index-of-first-occurrence-in-string/find-index-of-first-occurrence-in-string.h
        neetcode/1-arrays-and-hashing/medium/largest-number/largest-number.cpp
        neetcode/1-arrays-and-hashing/medium/largest-number/largest-number.h
        neetcode/1-arrays-and-hashing/medium/continous-subarray-sum/continous-subarray-sum.cpp
        neetcode/1-arrays-and-hashing/medium/continous-subarray-sum/continous-subarray-sum.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/unique-len-3-palindromic-subseq/unique-len-3-palindromic-subseq.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/unique-len-3-palindromic-subseq/unique-len-3-palindromic-subseq.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/subarray-sum-equals-k/subarray-sum-equals-k.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/subarray-sum-equals-k/subarray-sum-equals-k.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/min-number-of-swaps-to-make-string-balanced/min-number-of-swaps-to-make-string-balanced.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/min-number-of-swaps-to-make-string-balanced/min-number-of-swaps-to-make-string-balanced.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/number-of-pairs-of-interchangeable-rectangles/number-of-pairs-of-interchangeable-rectangles.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/number-of-pairs-of-interchangeable-rectangles/number-of-pairs-of-interchangeable-rectangles.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/find-all-anagrams-in-string/find-all-anagrams-in-string.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/find-all-anagrams-in-string/find-all-anagrams-in-string.h
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/largest-number/largest-number.cpp
        neetcode/1-arrays-and-hashing/medium/review/fri-19-jan-2024/largest-number/largest-number.h
        neetcode/1-arrays-and-hashing/medium/review/sat-20-jan-2024/continous-subarray-sum/continuous-subarray-sum.cpp
        neetcode/1-arrays-and-hashing/medium/review/sat-20-jan-2024/continous-subarray-sum/continuous-subarray-sum.h
        neetcode/1-arrays-and-hashing/medium/repeated-dna-sequence/repeated-dna-sequence.cpp
        neetcode/1-arrays-and-hashing/medium/repeated-dna-sequence/repeated-dna-sequence.h
        neetcode/1-arrays-and-hashing/medium/insert-delete-get-random-O-of-1/insert-delete-get-random-O-of-1.cpp
        neetcode/1-arrays-and-hashing/medium/insert-delete-get-random-O-of-1/insert-delete-get-random-O-of-1.h
        neetcode/1-arrays-and-hashing/medium/range-sum-query-2d-immutable/range-sum-query-2d-immutable.cpp
        neetcode/1-arrays-and-hashing/medium/range-sum-query-2d-immutable/range-sum-query-2d-immutable.h
        neetcode/1-arrays-and-hashing/medium/non-decreasing-array/non-decreasing-array.cpp
        neetcode/1-arrays-and-hashing/medium/non-decreasing-array/non-decreasing-array.h
        neetcode/1-arrays-and-hashing/fundamentals/sign-of-the-product-of-an-array/sign-of-the-product-of-an-array.cpp
        neetcode/1-arrays-and-hashing/fundamentals/sign-of-the-product-of-an-array/sign-of-the-product-of-an-array.h
        neetcode/1-arrays-and-hashing/fundamentals/find-the-diff-of-two-arrays/find-the-diff-of-two-arrays.cpp
        neetcode/1-arrays-and-hashing/fundamentals/find-the-diff-of-two-arrays/find-the-diff-of-two-arrays.h
        neetcode/1-arrays-and-hashing/fundamentals/design-parking-system/design-parking-system.cpp
        neetcode/1-arrays-and-hashing/fundamentals/design-parking-system/design-parking-system.h
        neetcode/1-arrays-and-hashing/medium/number-of-zero-filled-subarrays/number-of-zero-filled-subarrays.cpp
        neetcode/1-arrays-and-hashing/medium/number-of-zero-filled-subarrays/number-of-zero-filled-subarrays.h
        neetcode/1-arrays-and-hashing/medium/optimal-partition-of-string/optimal-partition-of-string.cpp
        neetcode/1-arrays-and-hashing/medium/optimal-partition-of-string/optimal-partition-of-string.h
        neetcode/1-arrays-and-hashing/medium/minimum-penalty-for-a-shop/minimum-penalty-for-a-shop.cpp
        neetcode/1-arrays-and-hashing/medium/minimum-penalty-for-a-shop/minimum-penalty-for-a-shop.h
        neetcode/1-arrays-and-hashing/medium/review/mon-22-jan-2024/subarray-sum-equals-k/subarray-sum-equals-k.cpp
        neetcode/1-arrays-and-hashing/medium/review/mon-22-jan-2024/subarray-sum-equals-k/subarray-sum-equals-k.h
        neetcode/1-arrays-and-hashing/medium/review/mon-22-jan-2024/unique-len-3-palindromic-subseq/unique-len-3-palindromic-subseq.cpp
        neetcode/1-arrays-and-hashing/medium/review/mon-22-jan-2024/unique-len-3-palindromic-subseq/unique-len-3-palindromic-subseq.h
        neetcode/2-two-pointers/fundamentals/valid-palindrome/valid-palindrome.cpp
        neetcode/2-two-pointers/fundamentals/valid-palindrome/valid-palindrome.h
        neetcode/2-two-pointers/fundamentals/valid-palindrome-II/valid-palindrome-II.cpp
        neetcode/2-two-pointers/fundamentals/valid-palindrome-II/valid-palindrome-II.h
        neetcode/2-two-pointers/fundamentals/min-diff-between-highest-and-lowest-of-k-scores/min-diff-between-highest-and-lowest-of-k-scores.cpp
        neetcode/2-two-pointers/fundamentals/min-diff-between-highest-and-lowest-of-k-scores/min-diff-between-highest-and-lowest-of-k-scores.h
        neetcode/2-two-pointers/fundamentals/merge-strings-alternately/merge-strings-alternately.cpp
        neetcode/2-two-pointers/fundamentals/merge-strings-alternately/merge-strings-alternately.h
        neetcode/2-two-pointers/fundamentals/reverse-string/reverse-string.cpp
        neetcode/2-two-pointers/fundamentals/reverse-string/reverse-string.h
        neetcode/2-two-pointers/fundamentals/merge-sorted-array/merge-sorted-array.cpp
        neetcode/2-two-pointers/fundamentals/merge-sorted-array/merge-sorted-array.h
        neetcode/2-two-pointers/fundamentals/move-zeroes/move-zeroes.cpp
        neetcode/2-two-pointers/fundamentals/move-zeroes/move-zeroes.h
        neetcode/2-two-pointers/fundamentals/remove-duplicates-from-sorted-array/remove-duplicates-from-sorted-array.cpp
        neetcode/2-two-pointers/fundamentals/remove-duplicates-from-sorted-array/remove-duplicates-from-sorted-array.h
        neetcode/2-two-pointers/medium/remove-duplicates-from-sorted-array-II/remove-duplicates-from-sorted-array-II.cpp
        neetcode/2-two-pointers/medium/remove-duplicates-from-sorted-array-II/remove-duplicates-from-sorted-array-II.h
        neetcode/2-two-pointers/medium/two-sum-II-input-array-sorted/two-sum-II-input-array-sorted.cpp
        neetcode/2-two-pointers/medium/two-sum-II-input-array-sorted/two-sum-II-input-array-sorted.h
        neetcode/2-two-pointers/medium/three-sum/three-sum.cpp
        neetcode/2-two-pointers/medium/three-sum/three-sum.h
        neetcode/2-two-pointers/medium/four-sum/four-sum.cpp
        neetcode/2-two-pointers/medium/four-sum/four-sum.h
        neetcode/2-two-pointers/medium/container-with-most-water/container-with-most-water.cpp
        neetcode/2-two-pointers/medium/container-with-most-water/container-with-most-water.h
        neetcode/2-two-pointers/medium/num-of-subseq-satisfying-given-sum-cond/num-of-subseq-satisfying-given-sum-cond.cpp
        neetcode/2-two-pointers/medium/num-of-subseq-satisfying-given-sum-cond/num-of-subseq-satisfying-given-sum-cond.h
        neetcode/2-two-pointers/medium/rotate-array/rotate-array.cpp
        neetcode/2-two-pointers/medium/rotate-array/rotate-array.h
        neetcode/2-two-pointers/medium/arr-with-elems-not-equal-to-avg-of-neighbors/arr-with-elems-not-equal-to-avg-of-neighbors.cpp
        neetcode/2-two-pointers/medium/arr-with-elems-not-equal-to-avg-of-neighbors/arr-with-elems-not-equal-to-avg-of-neighbors.h
        neetcode/3-sliding-window/fundamentals/best-time-to-buy-and-sell-stock/best-time-to-buy-and-sell-stock.cpp
        neetcode/3-sliding-window/fundamentals/best-time-to-buy-and-sell-stock/best-time-to-buy-and-sell-stock.h
        neetcode/3-sliding-window/fundamentals/contains-duplicate-II/contains-duplicate-II.cpp
        neetcode/3-sliding-window/fundamentals/contains-duplicate-II/contains-duplicate-II.h
        neetcode/3-sliding-window/medium/num-of-sub-arr-of-size-k-and-avg-greater-or-equal-to-threshold/num-of-sub-arr-of-size-k-and-avg-greater-or-equal-to-threshold.cpp
        neetcode/3-sliding-window/medium/num-of-sub-arr-of-size-k-and-avg-greater-or-equal-to-threshold/num-of-sub-arr-of-size-k-and-avg-greater-or-equal-to-threshold.h
        neetcode/3-sliding-window/medium/longest-substring-without-repeating-chars/longest-substring-without-repeating-chars.cpp
        neetcode/3-sliding-window/medium/longest-substring-without-repeating-chars/longest-substring-without-repeating-chars.h
        neetcode/3-sliding-window/medium/longest-repeating-char-replacement/longest-repeating-char-replacement.cpp
        neetcode/3-sliding-window/medium/longest-repeating-char-replacement/longest-repeating-char-replacement.h
        neetcode/3-sliding-window/medium/permutation-in-string/permutation-in-string.cpp
        neetcode/3-sliding-window/medium/permutation-in-string/permutation-in-string.h
        neetcode/3-sliding-window/medium/freq-of-most-freq-element/freq-of-most-freq-element.cpp
        neetcode/3-sliding-window/medium/freq-of-most-freq-element/freq-of-most-freq-element.h
        neetcode/3-sliding-window/medium/fruit-into-basket/fruit-into-basket.cpp
        neetcode/3-sliding-window/medium/fruit-into-basket/fruit-into-basket.h
        neetcode/3-sliding-window/medium/max-num-of-vowels-in-substr/max-num-of-vowels-in-substr.cpp
        neetcode/3-sliding-window/medium/max-num-of-vowels-in-substr/max-num-of-vowels-in-substr.h
        neetcode/3-sliding-window/medium/min-num-of-flips-to-make-binary-str-alternating/min-num-of-flips-to-make-binary-str-alternating.cpp
        neetcode/3-sliding-window/medium/min-num-of-flips-to-make-binary-str-alternating/min-num-of-flips-to-make-binary-str-alternating.h
        neetcode/3-sliding-window/medium/min-size-subarr-sum/min-size-subarr-sum.cpp
        neetcode/3-sliding-window/medium/min-size-subarr-sum/min-size-subarr-sum.h
        neetcode/3-sliding-window/medium/find-k-closest-elements/find-k-closest-elements.cpp
        neetcode/3-sliding-window/medium/find-k-closest-elements/find-k-closest-elements.h
        neetcode/4-stack/fundamentals/valid-parentheses/valid-parentheses.cpp
        neetcode/4-stack/fundamentals/valid-parentheses/valid-parentheses.h
        neetcode/4-stack/fundamentals/baseball-game/baseball-game.cpp
        neetcode/4-stack/fundamentals/baseball-game/baseball-game.h
        neetcode/4-stack/fundamentals/implement-stack-using-queues/implement-stack-using-queues.cpp
        neetcode/4-stack/fundamentals/implement-stack-using-queues/implement-stack-using-queues.h
        neetcode/4-stack/medium/min-stack/min-stack.h
        neetcode/4-stack/medium/min-stack/min-stack.cpp
        neetcode/4-stack/medium/eval-reverse-polish-notation/eval-reverse-polish-notation.cpp
        neetcode/4-stack/medium/eval-reverse-polish-notation/eval-reverse-polish-notation.h
        neetcode/4-stack/medium/removing-stars-from-string/removing-stars-from-string.cpp
        neetcode/4-stack/medium/removing-stars-from-string/removing-stars-from-string.h
        neetcode/4-stack/medium/validate-stack-seq/validate-stack-seq.cpp
        neetcode/4-stack/medium/validate-stack-seq/validate-stack-seq.h
        neetcode/4-stack/medium/generate-parentheses/generate-parentheses.cpp
        neetcode/4-stack/medium/generate-parentheses/generate-parentheses.h
        neetcode/4-stack/medium/asteroid-collision/asteroid-collision.cpp
        neetcode/4-stack/medium/asteroid-collision/asteroid-collision.h
        neetcode/4-stack/medium/online-stock-span/online-stock-span.cpp
        neetcode/4-stack/medium/online-stock-span/online-stock-span.h
        neetcode/4-stack/medium/daily-temperatures/daily-temperatures.cpp
        neetcode/4-stack/medium/daily-temperatures/daily-temperatures.h
        neetcode/4-stack/medium/car-fleet/car-fleet.cpp
        neetcode/4-stack/medium/car-fleet/car-fleet.h
        neetcode/4-stack/medium/simplify-path/simplify-path.cpp
        neetcode/4-stack/medium/simplify-path/simplify-path.h
        neetcode/5-binary-search/fundamentals/binary-search/binary-search.cpp
        neetcode/5-binary-search/fundamentals/binary-search/binary-search.h
        neetcode/5-binary-search/fundamentals/search-insert-position/search-insert-position.cpp
        neetcode/5-binary-search/fundamentals/search-insert-position/search-insert-position.h
)